// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeLiteral support > class literals > class with multiple fields 1`] = `
"using MyApp.Models;

new Person {
    Name = "Jane Smith",
    Age = 30,
    IsActive = true
}"
`;

exports[`TypeLiteral support > class literals > class with nested collection field 1`] = `
"using MyApp.Models;
using System.Collections.Generic;

new Team {
    TeamName = "Engineering",
    Members = new List<string>(){
        "Alice",
        "Bob",
        "Carol",
    }

}"
`;

exports[`TypeLiteral support > class literals > class with nop fields (filtered) 1`] = `
"using MyApp.Models;

new Person {
    Name = "Bob",
    LastName = "Johnson"
}"
`;

exports[`TypeLiteral support > class literals > class with single field 1`] = `
"using MyApp.Models;

new Person {
    Name = "John Doe"
}"
`;

exports[`TypeLiteral support > class literals > empty class instantiation 1`] = `
"using MyApp.Models;

new Person()"
`;

exports[`TypeLiteral support > complex combinations > class with various typed fields 1`] = `
"using MyApp.Models;
using System;
using System.Collections.Generic;

new ComplexModel {
    StringField = "text",
    IntField = 100,
    DoubleField = 3.14159,
    BoolField = true,
    DateField = DateOnly.Parse("2024-01-01"),
    ListField = new List<string>(){
        "a",
        "b",
    }
    ,
    DictField = new Dictionary<string, int>(){
        ["count"] = 5,
    }

}"
`;

exports[`TypeLiteral support > complex combinations > dictionary with list values 1`] = `
"using System.Collections.Generic;

new Dictionary<string, IEnumerable<int>>(){
    ["evens"] = new List<int>(){
        2,
        4,
        6,
    }
    ,
    ["odds"] = new List<int>(){
        1,
        3,
        5,
    }
    ,
}
"
`;

exports[`TypeLiteral support > complex combinations > list of dictionaries 1`] = `
"using System.Collections.Generic;

new List<IDictionary<string, string>>(){
    new Dictionary<string, string>(){
        ["key1"] = "value1",
    }
    ,
    new Dictionary<string, string>(){
        ["key2"] = "value2",
    }
    ,
}
"
`;

exports[`TypeLiteral support > complex combinations > set of sets 1`] = `
"using System.Collections.Generic;

new HashSet<HashSet<int>>(){
    new HashSet<int>(){
        1,
        2,
    }
    ,
    new HashSet<int>(){
        3,
        4,
    }
    ,
}
"
`;

exports[`TypeLiteral support > date and time literals > date 1`] = `
"using System;

DateOnly.Parse("2023-12-25")"
`;

exports[`TypeLiteral support > date and time literals > datetime 1`] = `
"using System;
using System.Globalization;

DateTime.Parse("2023-12-25T10:30:00Z", null, DateTimeStyles.AdjustToUniversal)"
`;

exports[`TypeLiteral support > dictionary literals > dictionary with integer keys and string values 1`] = `
"using System.Collections.Generic;

new Dictionary<int, string>(){
    [1] = "first",
    [2] = "second",
}
"
`;

exports[`TypeLiteral support > dictionary literals > dictionary with nop entries (filtered) 1`] = `
"using System.Collections.Generic;

new Dictionary<string, string>(){
    ["valid"] = "entry",
}
"
`;

exports[`TypeLiteral support > dictionary literals > dictionary with string keys and integer values 1`] = `
"using System.Collections.Generic;

new Dictionary<string, int>(){
    ["one"] = 1,
    ["two"] = 2,
    ["three"] = 3,
}
"
`;

exports[`TypeLiteral support > dictionary literals > empty dictionary 1`] = `
"using System.Collections.Generic;

new Dictionary<string, int>()"
`;

exports[`TypeLiteral support > dictionary literals > nested dictionary 1`] = `
"using System.Collections.Generic;

new Dictionary<string, IDictionary<string, int>>(){
    ["group1"] = new Dictionary<string, int>(){
        ["a"] = 1,
    }
    ,
}
"
`;

exports[`TypeLiteral support > list literals > empty list 1`] = `
"using System.Collections.Generic;

new List<string>()"
`;

exports[`TypeLiteral support > list literals > list with integers 1`] = `
"using System.Collections.Generic;

new List<int>(){
    1,
    2,
    3,
}
"
`;

exports[`TypeLiteral support > list literals > list with nop values (filtered) 1`] = `
"using System.Collections.Generic;

new List<int>(){
    1,
    3,
}
"
`;

exports[`TypeLiteral support > list literals > list with strings 1`] = `
"using System.Collections.Generic;

new List<string>(){
    "apple",
    "banana",
    "cherry",
}
"
`;

exports[`TypeLiteral support > list literals > nested list 1`] = `
"using System.Collections.Generic;

new List<IEnumerable<int>>(){
    new List<int>(){
        1,
        2,
    }
    ,
    new List<int>(){
        3,
        4,
    }
    ,
}
"
`;

exports[`TypeLiteral support > primitive literals > boolean - false 1`] = `"false"`;

exports[`TypeLiteral support > primitive literals > boolean - true 1`] = `"true"`;

exports[`TypeLiteral support > primitive literals > decimal 1`] = `"99.99m"`;

exports[`TypeLiteral support > primitive literals > double 1`] = `"2.718281828"`;

exports[`TypeLiteral support > primitive literals > float 1`] = `"3.14f"`;

exports[`TypeLiteral support > primitive literals > integer 1`] = `"42"`;

exports[`TypeLiteral support > primitive literals > long 1`] = `"9007199254740991L"`;

exports[`TypeLiteral support > primitive literals > nop 1`] = `""`;

exports[`TypeLiteral support > primitive literals > null 1`] = `"null"`;

exports[`TypeLiteral support > primitive literals > string 1`] = `""hello world""`;

exports[`TypeLiteral support > primitive literals > string with special characters 1`] = `""hello\\nworld\\t\\"quotes\\"""`;

exports[`TypeLiteral support > primitive literals > uint 1`] = `"42u"`;

exports[`TypeLiteral support > primitive literals > ulong 1`] = `"9007199254740991ul"`;

exports[`TypeLiteral support > reference literals > reference to method invocation 1`] = `
"using MyApp;

MyClass.GetValue()"
`;

exports[`TypeLiteral support > reference literals > reference to variable 1`] = `"myVariable"`;

exports[`TypeLiteral support > set literals > empty set 1`] = `
"using System.Collections.Generic;

new HashSet<string>()"
`;

exports[`TypeLiteral support > set literals > set with integers 1`] = `
"using System.Collections.Generic;

new HashSet<int>(){
    10,
    20,
    30,
}
"
`;

exports[`TypeLiteral support > set literals > set with nop values (filtered) 1`] = `
"using System.Collections.Generic;

new HashSet<string>(){
    "alpha",
    "beta",
}
"
`;

exports[`TypeLiteral support > set literals > set with strings 1`] = `
"using System.Collections.Generic;

new HashSet<string>(){
    "red",
    "green",
    "blue",
}
"
`;

exports[`TypeLiteral support > unknown literals > unknown - array with mixed types 1`] = `
"using System.Collections.Generic;

new List<object>()
{
    1,
    "two",
    true,
    null,
}
"
`;

exports[`TypeLiteral support > unknown literals > unknown - boolean 1`] = `"true"`;

exports[`TypeLiteral support > unknown literals > unknown - empty array 1`] = `
"using System.Collections.Generic;

new List<object>()"
`;

exports[`TypeLiteral support > unknown literals > unknown - empty object 1`] = `
"using System.Collections.Generic;

new Dictionary<string, object>()"
`;

exports[`TypeLiteral support > unknown literals > unknown - nested array 1`] = `
"using System.Collections.Generic;

new List<object>()
{
    new List<object>()
    {
        1,
        2,
    }
    ,
    new List<object>()
    {
        3,
        4,
    }
    ,
}
"
`;

exports[`TypeLiteral support > unknown literals > unknown - nested object 1`] = `
"using System.Collections.Generic;

new Dictionary<string, object>()
{
    ["user"] = new Dictionary<string, object>()
    {
        ["name"] = "Alice",
        ["settings"] = new Dictionary<string, object>()
        {
            ["theme"] = "dark",
        }
        ,
    }
    ,
}
"
`;

exports[`TypeLiteral support > unknown literals > unknown - null 1`] = `"null"`;

exports[`TypeLiteral support > unknown literals > unknown - number 1`] = `"42"`;

exports[`TypeLiteral support > unknown literals > unknown - object with array property 1`] = `
"using System.Collections.Generic;

new Dictionary<string, object>()
{
    ["items"] = new List<object>()
    {
        1,
        2,
        3,
    }
    ,
    ["count"] = 3,
}
"
`;

exports[`TypeLiteral support > unknown literals > unknown - object with primitive properties 1`] = `
"using System.Collections.Generic;

new Dictionary<string, object>()
{
    ["name"] = "John",
    ["age"] = 30,
    ["active"] = true,
}
"
`;

exports[`TypeLiteral support > unknown literals > unknown - string 1`] = `""test string""`;
